@@ -218,7 +218,7 @@ We'll explain the <a href="../../classdocs/ec/util/Parameter.html">ec.util.Param
 
 <p>If we discover that we have an invalid or missing probability, we issue a fatal error.  As you can see, fatal(...) can take Parameters as optional arguments, and prints them out in a nice way so it's easy to see what parameter caused the problem.
 
-<p>Our class inherits from <a href="../../classdocs/ec/SelectionMethod.html">ec.SelectionMethod</a>, which inherits from <a href="../../classdocs/ec/BreedingSource.html">ec.BreedingSource</a>, which implements <a href="../../classdocs/ec/Prototype.html">ec.Prototype</a>, which in turn implements <a href="../../classodcs/ec/Setup.html">ec.Setup</a>, which is where the setup(...) method came from.  This method is called when a class is first loaded and initialized at startup-time.  From then on, Prototypes are copied from the initial class using Java's clone() facility.  Note that clone() does not deep-clone.  That's okay, since our parameter is just a double and will get cloned by clone().  But if it were an array, we'd have to override the <tt>clone()</tt> method in <tt>ec.Prototype</tt> to do more intelligent cloning.  (For historical purposes, every Prototype except for subclasses of Individual that uses clone() does deep-cloning with it -- Individuals should have their deepClone() method called instead).
+<p>Our class inherits from <a href="../../classdocs/ec/SelectionMethod.html">ec.SelectionMethod</a>, which inherits from <a href="../../classdocs/ec/BreedingSource.html">ec.BreedingSource</a>, which implements <a href="../../classdocs/ec/Prototype.html">ec.Prototype</a>, which in turn implements <a href="../../classodcs/ec/Setup.html">ec.Setup</a>, which is where the setup(...) method came from.  This method is called when a class is first loaded and initialized at startup-time.  From then on, Prototypes are copied from the initial class using Java's clone() facility.  Note that in Java, clone() does not deep-clone unless we have overridden it to do so.  That's okay, since our parameter is just a double and will get cloned by clone().  But if it were an array, we'd have to override the <tt>clone()</tt> method in <tt>ec.Prototype</tt> to do more intelligent cloning.
 
 <p>Selection methods, like breeding pipelines, have methods <tt>prepareToProduce(...)</tt> and <tt>finishProducing(...)</tt> which are called prior to and after a chain of <tt>produce(...)</tt> calls. These methods allow the pipeline to set itself up (gathering sorted statistics of fitness values, or whatever is necessary).  Also, there is a method called <tt>produces(...)</tt> which returns true if we can produce individuals for a given subpopulation.  Our pipeline doesn't need to call any of these methods, so we will rely on the defaults in the SelectionMethod class, which do nothing.
 
