@@ -4,6 +4,4 @@
 
 parent.0 = ./erc.params
 
-generations = 1000
-
 gp.fs.0.size = 9
